# c_github-parser

./: .envrc  .gitignore  clib.json  dev.sh  meson.build  test.sh  tidy.sh
include/: get-element-by-id.h
src/: get-element-by-id.c
tests/: test1.c
